--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ aws_env
 # .tfstate files
 *.tfstate
 *.tfstate.*
+# because this is for training souces. remove followin line in actual use.
+.terraform.lock.hcl
 
 # Crash log files
 crash.log
